@@ -2746,12 +2746,13 @@ function yn($yesno, $case=1, $color=0)
 
 
 /**
- *	\brief      Return a path to class a directory according to an id
- *	\param      $num        Id to develop
- *	\param      $level		Level of development (1, 2 or 3 level)
- * 	\param		$alpha		Use alpha ref
- *	\remarks    Examples: 	'001' with level 3->"0/0/1/", '015' with level 3->"0/1/5/"
- *	\remarks    Examples: 	'ABC-1' with level 3 ->"0/0/1/", '015' with level 1->"5/"
+ *	\brief      Return a path to have a directory according to an id
+ *	\param      $num            Id to develop
+ *	\param      $level		    Level of development (1, 2 or 3 level)
+ * 	\param		$alpha		    Use alpha ref
+ *  \param      withoutslash    0=With slash at end, 1=without slash at end
+ *	\remarks    Examples: 	    '001' with level 3->"0/0/1/", '015' with level 3->"0/1/5/"
+ *	\remarks    Examples: 	    'ABC-1' with level 3 ->"0/0/1/", '015' with level 1->"5/"
  */
 function get_exdir($num,$level=3,$alpha=0,$withoutslash=0)
 {
